--- a/contact.html
+++ b/contact.html
@@ -43,18 +43,15 @@
 		</section>
 		<!-- bloc-0 END -->
 		<!-- bloc-6 -->
-		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+		<section id="bloc-6" class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine-lighter d-bloc bloc-bg-texture texture-paper">
 			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
-							Parlons web design !
-						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-						</p>
-					</div>
+				<div class="col-sm-12 bgc-atomic-tangerine text-center">
+					<h1 class="tc-white">
+						Parlons web design !
+					</h1>
+					<p class="text-center tc-white">
+						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+					</p>
 				</div>
 			</div>
 		</section>
@@ -62,8 +59,7 @@
 		<!-- bloc-7 -->
 		<section class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-7">
 						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
 								<label for="name">Nom</label>
@@ -93,18 +89,15 @@
 							</div>
 						</form>
 					</div>
-					<div class="col-sm-6">
-						<p>
-							contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-						</p>
-					</div>
 				</div>
-			</div>
 		</section>
 		<!-- bloc-7 END -->
 		<!-- ScrollToTop Button -->
 		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
+		<div class="text-center horaires">
+			Ouvert de 9h à 18h, du lundi au vendredi
+		</div>
 	</main>
 	<!-- Principal conteneur END -->
 	<!-- Footer - bloc-8 -->
