--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
 		<!-- bloc-2-services -->
 		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
-				<div class="row">
+				<div class="row voffset-lg med-width-whitespace">
 					<h2 class="col-sm-12 text-center">
 						L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet
 					</h2>
-				</div>
-				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
@@ -106,8 +104,8 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<blockquote class="temoignage">
-							"L'agence la Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intègrer à notre site. Cela nous a aide à doubler nos ventes en ligne à Lyon."
+						<blockquote class="temoignage statement-bloc-text">
+							"L'agence la Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intègrer à notre site. Cela nous a aide à doubler nos ventes en ligne à Lyon."
 						</blockquote>
 							<p class="temoignage">Maxime Guibard, PDG de A vos fourchettes</p>
 					</div>
@@ -135,11 +133,7 @@
 		<!-- bloc-4-portfolio -->
 		<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<h2>Nous travaillons avec beaucoup de clients, <br> voici nos réalisations</h2>
-					</div>
-				</div>
+				<h2 class="col-sm-12 text-center">Nous travaillons avec beaucoup de clients, <br> voici nos réalisations</h2>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
 					  <a href="#" data-lightbox="img/journal.avif" data-gallery-id="gallery-1"
