--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<link rel="canonical" href="https://lysianebo.github.io/LaPanthere/">
 	<link rel="shortcut icon" type="image/jpg" href="img/favicon.avif">
 
-    <link rel="stylesheet" type="text/css" href="css/et-line.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/et-line.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 
 	
 	
@@ -238,9 +238,9 @@
     </footer>
 	<!-- Footer - bloc-8 END -->
 	<!-- Scripts -->
-	<script src="js/jquery-2.1.0.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/blocs.js"></script>
-	<script src="js/jquery.touchSwipe.js"></script>
+	<script src="js/jquery-2.1.0.min.js"></script>
+	<script async src="js/bootstrap.min.js"></script>
+	<script async src="js/blocs.min.js"></script>
+	<script async src="js/jquery.touchSwipe.min.js"></script>
 </body>
 </html>
