--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,16 @@
 		<meta charset="utf-8">
 		<meta name="description" content=" A Lyon, La Panthère est une agence de web design dotée d’une équipe de graphistes talentueux. Après étude sérieuse de vos objectifs commerciaux, l’agence aide votre entreprise à créer son site internet unique pour se démarquer de vos concurrents.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-		<meta http-equiv="cache-control" content="no-cache">
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'">
 		<meta name="robots" content="all">
 		
 		<link rel="canonical" href="https://lysianebo.github.io/LaPanthere/">
-		<link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg">
+		<link rel="shortcut icon" type="image/jpg" href="img/favicon.avif">
     
-		<link rel="stylesheet" type="text/css" href="css/et-line.css">
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/et-line.min.css">
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css">
 
 		<title>Première Agence Web Design à Lyon Contact</title>
 	</head>
@@ -21,11 +21,11 @@
 <!-- Principal conteneur -->
 	<main class="page-container">
 		<!-- bloc-0 -->
-		<section class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'entreprise webdesign la panthère" height="40" /></a>
+						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'entreprise webdesign la panthère" height="40"></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
@@ -40,7 +40,7 @@
 					</div>
 				</nav>
 			</div>
-		</section>
+		</div>
 		<!-- bloc-0 END -->
 		<!-- bloc-6 -->
 		<section id="bloc-6" class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine-lighter d-bloc bloc-bg-texture texture-paper">
@@ -57,10 +57,10 @@
 		</section>
 		<!-- bloc-6 END -->
 		<!-- bloc-7 -->
-		<section class="bloc bgc-white l-bloc" id="bloc-7">
+		<div class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 					<div class="col-sm-7">
-						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<form id="form_1">
 							<div class="form-group">
 								<label for="name">Nom</label>
 								<input id="name" class="form-control" required>
@@ -90,7 +90,7 @@
 						</form>
 					</div>
 				</div>
-		</section>
+			</div>
 		<!-- bloc-7 END -->
 		<!-- ScrollToTop Button -->
 		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
@@ -105,7 +105,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<p class="text-center white">Agence Web Design La Panthère</p>
-				<p class="text-center white">contact@agencelapanthere.com<br/>2 place Sathonay 69001 Lyon</p>
+				<p class="text-center white">contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon</p>
 				<div class="row row-no-gutters social">
 					<a class="social" href="https://twitter.com/" aria-label="Twitter" title="Suivez-nous sur Twitter"
 					target="_blank"><i class="fa fa-twitter icon-md"></i></a>
@@ -121,11 +121,11 @@
     </footer>
 	<!-- Footer - bloc-8 END -->
     <!-- Scripts -->
-	  <script src="js/jquery-2.1.0.js"></script>
-      <script src="js/bootstrap.js"></script>
-      <script src="js/blocs.js"></script>
-      <script src="js/jquery.touchSwipe.js"></script>
-	  <script src="./js/jqBootstrapValidation.js"></script>
-	  <script src="./js/formHandler.js"></script>
+	  <script src="js/jquery-2.1.0.min.js"></script>
+      <script async src="js/bootstrap.min.js"></script>
+      <script async src="js/blocs.min.js"></script>
+      <script async src="js/jquery.touchSwipe.min.js"></script>
+	  <script async src="./js/jqBootstrapValidation.min.js"></script>
+	  <script async src="./js/formHandler.min.js"></script>
 </body>
 </html>
