--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content=" A Lyon, La Panthère est une agence de web design dotée d’une équipe de graphistes talentueux. Après étude sérieuse de vos objectifs commerciaux, l’agence aide votre entreprise à créer son site internet unique pour se démarquer de vos concurrents.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-		<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'">
-		<meta name="robots" content="all">
-		
+				
 		<link rel="canonical" href="https://lysianebo.github.io/LaPanthere/">
 		<link rel="shortcut icon" type="image/jpg" href="img/favicon.avif">
     
@@ -126,6 +124,6 @@
       <script async src="js/blocs.min.js"></script>
       <script async src="js/jquery.touchSwipe.min.js"></script>
 	  <script async src="/js/jqBootstrapValidation.min.js"></script>
-	  <script async src="/js/formHandler.min.js"></script>
+	  <script async src="/js/formHandler.js"></script>
 </body>
 </html>
