--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 			</div>
 		<!-- bloc-7 END -->
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		<a href="#"  class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 		<div class="text-center horaires">
 			Ouvert de 9h à 18h, du lundi au vendredi
